--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     padding: 0;
     box-sizing: border-box ;
     font-family: 'Montserrat', sans-serif;
+    
 }
 
 html{
@@ -16,6 +17,12 @@ html{
 
 body{
     overflow-x: hidden;
+
+}
+
+body * {
+    -webkit-font-smoothing:  antialiased;
+    text-rendering: optimizeLegibility;
 
 }
 
